--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,6 @@ python:
 
 before_install: "pip install -r requeriments.txt"
 
-script:
-"coverage run --source=ingreso_pacientes manage.py test ingreso_pacientes"
+script: "coverage run --source=ingreso_pacientes manage.py test ingreso_pacientes"
 
-after_script:
-"coveralls"
+after_script: "coveralls"
